--- a/prakt/p1/praktikum1.lyx
+++ b/prakt/p1/praktikum1.lyx
@@ -311,6 +311,46 @@ subplot(4,1,4); stem(n3, y2);
 \end_layout
 
 \begin_layout Section
+Impulse Response LTI: Z-transform, Difference Eq, Filter
+\end_layout
+
+\begin_layout Standard
+Sebuah sistem kausal LTI memiliki hubungan input-output sebagai berikut,
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+y[n]\text{−}\frac{1}{4}y[n\text{−}1]\text{−}\frac{1}{8}y[n\text{−}2]=x[n\text{−}1]
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+a) Hitung fungsi transfer 
+\begin_inset Formula $\frac{Y[z]}{X[z]}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+b) Tentukan impulse response-nya dari transormasi Z, dengan menggunakan
+ difference equation dan matlab routin 
+\begin_inset Quotes eld
+\end_inset
+
+filter
+\begin_inset Quotes erd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Section
 Input dan Step Response
 \end_layout
 
